--- a/css/styles.css
+++ b/css/styles.css
@@ -141,3 +141,25 @@ body {
 .card:hover {
   background-color: transparent;
 }
+
+/* ------------------------------
+   Rotate animation keyframes
+--------------------------------*/
+@keyframes spin {
+  0% {
+    --rotate: 0deg;
+  }
+  100% {
+    --rotate: 360deg;
+  }
+}
+
+/* ------------------------------
+   Responsive layout
+--------------------------------*/
+@media screen and (max-width: 768px) {
+  .card {
+    width: 200px;
+    margin: 1rem;
+  }
+}
